Fixed banner on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -26,8 +26,7 @@ h1 {
 a {
 	color: black;
 }
-h2,
-h3 {
+h2, h3 {
 	margin-top: 5;
     font-family: 'Oswald', sans-serif;
     padding-bottom: 1em;
@@ -57,8 +56,7 @@ img {
 .main-nav {
 	margin-top: 5px;
 }
-.name a,
-.main-nav a {
+.name a, .main-nav a {
 	text-align: center;
 	display: block;
 	padding: 10px 15px;
@@ -69,9 +67,15 @@ img {
 	text-transform: uppercase;
 }
 .main-nav a:hover {
-	color: darkgreen;
+	color: #7A9697;
 }
-
+.subhead {
+    text-align: center;
+    color: #ACE1E4;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2em;
+    margin-top: 100px; 
+}
 
 /* ---- Layout Containers ---- */
 
@@ -85,6 +89,7 @@ img {
 }
 .banner {
 	padding: 3.2em 0;
+    text-overflow: inherit;
 }
 .col {
 	padding-right: 1em;
@@ -93,7 +98,6 @@ img {
 .main-footer {
 	background: #d9e4ea;
 	padding: 2em 0;
-	
 }
 
 .blog-title {
@@ -127,10 +131,6 @@ img {
 }
 
 .tagline {
-    padding-top: 50px;
-    padding-right: 30px;
-    padding-bottom: 50px;
-    padding-left: 80px;
     text-align: center;
     color: #ACE1E4;
     font-family: 'Oswald', sans-serif;
@@ -157,6 +157,7 @@ img {
   font-family: 'Oswald', sans-serif;
   margin: 1em;
   padding: 1em 2em;
+  max-width: 80%;
   
 }
 
@@ -199,8 +200,7 @@ select {
 		width: 90%;
 		margin: 0 auto;
 	}
-	.tagline {
-		font-size: 1.4em;
+	
 	}
 }
 @media (min-width: 1025px) {
@@ -218,9 +218,6 @@ select {
 
 @import "compass/css3";
 
-body,html {
-  width: 100%;
-}
 img {
   display: block;
   margin: 50px auto;
@@ -265,7 +262,7 @@ img:hover {
     font-family: 'Oswald', sans-serif;
     margin-top: 20px;
     background-color: #003638;
-    
+    max-width: 80%;
 }
 
 body {
@@ -289,6 +286,7 @@ section > button {
   padding: 12px 18px 13px;
   color: white;
   cursor:pointer;
+  max-width: 80%;
 }
 
 section > button:hover {
