--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -58,3 +58,23 @@
     .site-content {
   flex: 1;
 }
+
+@media handheld, only screen and (max-width: 767px) {
+    .headline {
+        padding: 0 0 0 0;
+        margin: 0 5px 0 0;
+        
+    }
+    
+    .subhead {
+    line-height: 30px;
+    height: 500px;
+    width:600px;
+    max-width: 320px; /* or whatever size you want */
+    float: center;
+    padding: 10px;
+    font-size: 100%;
+    margin: 10px;
+    word-wrap: break-word;
+    }
+}
